--- a/base/core_presentation/src/main/res/values/colors.xml
+++ b/base/core_presentation/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="defaultItemTitleColor">@android:color/white</color>
     <color name="defaultItemSubTitleColor">#CCCCCC</color>
     <color name="defaultItemHolderColor">#AA000000</color>
+
+    <color name="background">#303030</color>
+    <color name="scrim">#39be9</color>
+    <color name="white">#ffffff</color>
+
+
 </resources>
