--- a/base/core_presentation/src/main/res/values/colors.xml
+++ b/base/core_presentation/src/main/res/values/colors.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">#39be96</color>
+    <color name="colorPrimaryDark">#1fa67d</color>
+    <color name="colorAccent">#39be96</color>
     <color name="defaultItemTitleColor">@android:color/white</color>
     <color name="defaultItemSubTitleColor">#CCCCCC</color>
     <color name="defaultItemHolderColor">#AA000000</color>
 
     <color name="background">#303030</color>
-    <color name="scrim">#39be9</color>
+    <color name="scrim">#39be96</color>
     <color name="white">#ffffff</color>
+    <color name="background800">#424242</color>
+    <color name="background900">#212121</color>
 
 
 </resources>
