--- a/dashboard/dashboard_presentation/src/main/res/values/styles.xml
+++ b/dashboard/dashboard_presentation/src/main/res/values/styles.xml
@@ -5,14 +5,18 @@
 
     <style name="GameItem.Wrapper">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">256dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:layout_marginBottom">16dp</item>
     </style>
 
     <style name="GameItem.Wrapper.Inner">
         <item name="android:background">@color/defaultItemHolderColor</item>
         <item name="android:padding">@dimen/default_item_inner_padding</item>
         <item name="android:orientation">vertical</item>
-        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_below">@id/imageViewBackground</item>
+        <item name="android:layout_centerHorizontal">true</item>
     </style>
 
     <style name="GameItem.Image">
