--- a/base/core_presentation/src/main/res/values/dimens.xml
+++ b/base/core_presentation/src/main/res/values/dimens.xml
@@ -3,9 +3,30 @@
     <!-- View Dimens -->
     <dimen name="default_item_holder_height">196dp</dimen>
     <dimen name="default_item_inner_padding">10dp</dimen>
+    <dimen name="default_app_bar_layout_height">280dp</dimen>
+    <dimen name="default_game_item_height">256dp</dimen>
 
     <!-- Text Dimens -->
     <dimen name="default_title_text_size">18sp</dimen>
     <dimen name="default_sub_title_text_size">16sp</dimen>
+    <dimen name="font_xxsmall">8sp</dimen>
+    <dimen name="font_xsmall">9sp</dimen>
+    <dimen name="font_small">10sp</dimen>
+    <dimen name="font_medium">12sp</dimen>
+    <dimen name="font_large">14sp</dimen>
+    <dimen name="font_xlarge">16sp</dimen>
+    <dimen name="font_xxlarge">22sp</dimen>
+    <dimen name="font_xxxlarge">30sp</dimen>
+    <dimen name="font_huge">34sp</dimen>
+    <dimen name="spacing_extra">5sp</dimen>
+
+    <dimen name="space_xs">4dp</dimen>
+    <dimen name="space_s">8dp</dimen>
+    <dimen name="space_m">16dp</dimen>
+    <dimen name="space_l">24dp</dimen>
+    <dimen name="space_xl">32dp</dimen>
+    <dimen name="space_xxl">40dp</dimen>
+    <dimen name="space_xxxl">48dp</dimen>
+    <dimen name="space_xxxxl">64dp</dimen>
 
 </resources>
