--- a/dashboard/dashboard_presentation/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/dashboard/dashboard_presentation/src/main/res/layout/fragment_bottom_navigation.xml
@@ -1,10 +1,8 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Main content -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
