--- a/dashboard/dashboard_presentation/src/main/res/layout/layout_game_detail_header.xml
+++ b/dashboard/dashboard_presentation/src/main/res/layout/layout_game_detail_header.xml
@@ -15,7 +15,7 @@
         android:maxEms="12"
         android:singleLine="true"
         android:textColor="@color/white"
-        android:textSize="27sp"
+        android:textSize="@dimen/font_xxxlarge"
         android:textStyle="bold"
         tools:text="GTA V" />
 
@@ -26,7 +26,7 @@
         android:layout_marginTop="6dp"
         android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/font_large"
         tools:text="Release Date :" />
 
     <RatingBar
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/space_s"
         tools:rating="3.5f" />
 
 </LinearLayout>
